html 내 url 도메인으로 변경

--- a/templates/auction/main.html
+++ b/templates/auction/main.html
@@ -69,7 +69,7 @@
 
             <div style="padding-top: 15px">
                 <p class="regular font-size-regular" style="cursor:pointer;"
-                   onclick="window.open('http://127.0.0.1:8000/search/?csrfmiddlewaretoken=1ZYqIL4VI1cc6tJRLFPkUBJn8P0NF5ioUT8Or0jr2yN2ji7POS4KyFt5wDFEc8gc&kw={{ product.product_name }}')">{{ product.product_name }}</p>
+                   onclick="window.open('http://www.photoauction.site/search/?csrfmiddlewaretoken=1ZYqIL4VI1cc6tJRLFPkUBJn8P0NF5ioUT8Or0jr2yN2ji7POS4KyFt5wDFEc8gc&kw={{ product.product_name }}')">{{ product.product_name }}</p>
                 <p class="bold font-size-regular" style="line-height: 80%"
                    id="current_price">{{ product.current_price }}원 <span
                         class="sold">{{ product.sold }}</span></p>
