--- a/templates/content/product_detail.html
+++ b/templates/content/product_detail.html
@@ -28,7 +28,7 @@
 <body style="min-width: 900px">
 <div class="top">
     <p class="bold" style="color: whitesmoke; font-size: 40px; cursor:pointer"
-       onclick="location.href='http://localhost:8000'"> 메인으로
+       onclick="location.href='http://www.photoauction.site'"> 메인으로
         돌아가기</p>
 </div>
 
@@ -37,7 +37,7 @@
         <!-- 왼쪽 -->
         <div class="left-container" id="left-container">
             <!--이미지-->
-            <div class="image-box hi">  {# 일단 아무거나 눌러도 같은 상세페이지 #}
+            <div class="image-box hi">
                 <img class="product-img"
                      src="{% get_static_prefix %}{{ product.image }}">
             </div>
