--- a/static/base.css
+++ b/static/base.css
@@ -1,3 +1,7 @@
+html {
+    font-size: 62.5%;
+}
+
 p {
     font-family: 'Noto Sans KR', serif;
 }
@@ -5,6 +9,19 @@ p {
 .title-font {
     font-family: 'Noto Serif KR', serif;
 }
+
+.font-size-small {
+    font-size: 1.0rem
+}
+
+.font-size-regular {
+    font-size: 1.6rem
+}
+
+.font-size-large {
+    font-size: 2.5rem
+}
+
 
 .regular {
     font-weight: 400;
@@ -59,10 +76,9 @@ p {
 .image-box {
     display: inline-flex;
     align-items: center;
-    border: solid 1px lightgray;
-    border-radius: 25px;
     width: 100%;
     height: 80%;
+    filter: drop-shadow(0px 3px 3px #777777);
 }
 
 .product-img {
@@ -77,9 +93,29 @@ p {
 
 .site-bottom {
     width: 100%;
-    height: 170px;
     background-color: lightgray;
     padding: 20px 75px;
     line-height: 70%;
     text-align: center;
+    font-size: 0.9rem;
+}
+
+@media only screen and (max-width: 901px) {
+    .search-bar {
+        display: block;
+        padding: 10px 10px;
+    }
+
+    .flex-container {
+        min-width: 300px;
+        padding: 10px 30px;
+    }
+
+    .flex-item {
+        width: 50%
+    }
+
+    .site-bottom {
+        padding: 20px 10px;
+    }
 }
