모바일 상세페이지 화면 수정 ver.1

--- a/PhotoAuction/static/style.css
+++ b/PhotoAuction/static/style.css
@@ -229,4 +229,22 @@ button {
         padding: 20px 0;
     }
 
+    .main-container {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .right-container {
+        width: 80%;
+    }
+
+    .left-container {
+        width: 100%;
+        justify-content: center;
+    }
+
+    #modal_click_bid {
+        position: fixed;
+    }
+
 }
