--- a/templates/auction/main.html
+++ b/templates/auction/main.html
@@ -109,10 +109,12 @@
     {% for product in products %}
         sold = '{{ product.sold }}';
         id = {{ product.id }} -1
-        if (sold === 'True') {
+        if (sold === '1') {
             document.getElementsByClassName("sold")[id].innerHTML = '<span class="badge rounded-pill text-bg-secondary">sold out</span>'
-        } else {
+        } else if (sold === '0') {
             document.getElementsByClassName("sold")[id].innerHTML = '<span class="badge rounded-pill text-bg-success">진행중</span>'
+        } else {
+            document.getElementsByClassName("sold")[id].innerHTML = '<span class="badge rounded-pill text-bg-success">상시 판매</span>'
         }
     {% endfor %}
 
