기술적 문제 발생시 메일 추가

--- a/templates/auction/main.html
+++ b/templates/auction/main.html
@@ -88,6 +88,7 @@
             <p class="regular contact-info" style="color: dimgray"> 박수빈 </p>
             <p class="regular contact-info" style="color: dimgray"> E-mail: sbinp5818@naver.com </p>
             <p class="regular contact-info" style="color: dimgray"> Instagram: @su.napshot </p>
+            <p class="regular contact-info" style="color: dimgray"> 기술적 문제 발생시: sunapshot@gmail.com </p>
         </div>
         <!-- 옥키 -->
         <div style="margin-left: 50px; text-align: left">
