--- a/templates/content/product_detail.html
+++ b/templates/content/product_detail.html
@@ -10,6 +10,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" type="text/css" href="{% static 'style.css' %} ">
     <style>
@@ -58,6 +60,7 @@
                 <p class="medium font-size-regular" id="sold_out"></p>
             </div>
 
+
             <!-- 버튼 div -->
             <div class="button-box">
                 <div>
@@ -70,6 +73,14 @@
                             onclick="window.scrollTo(0,0)">즉시 구매
                     </button>
                 </div>
+            </div>
+            <div id="get_noti">
+                <p class="font-size-small">*입찰 전, 관심 작품의 가격 변동을 입찰자와 동일하게 메일로 알림 받을 수 있습니다</p>
+                <button class="w-btn-mini font-size-small" id="get_noti_btn" onclick="window.scrollTo(0,0)"><span
+                        class="material-symbols-outlined font-size-regular">
+forward_to_inbox
+</span>
+                </button>
             </div>
         </div>
     {% endfor %}
@@ -104,7 +115,8 @@
             <p class="regular contact-info" style="color: dimgray"> 서울특별시 중구 삼일대로4길 19 2층 </p>
         </div>
     </div>
-    <div class="font-size-small" style="color: gray; padding-top: 10px"> COPYRIGHT 2023 박수빈. ALL RIGHTS RESERVED.</div>
+    <div class="font-size-small" style="color: gray; padding-top: 10px"> COPYRIGHT 2023 박수빈. ALL RIGHTS RESERVED.
+    </div>
 </div>
 
 <!-- 모달 -->
@@ -131,21 +143,23 @@
                 </div>
 
                 <!--정보 입력 폼-->
-                <div id="bid_price_form" style="display:flex; flex-direction:row; justify-content: space-between"></div>
+                <div id="bid_price_form"
+                     style="display:flex; flex-direction:row; justify-content: space-between"></div>
                 <div style="background-color: whitesmoke; width: 100%; margin-top: 5px; padding: 15px;">
-                    <p class="font-size-regular"><label>성명 <input id="bidder_name" type="text"
-                                                                  name="bidder_name"></label></p>
-                    <p class="font-size-regular"><label>전화번호 <input id="bidder_phone" type="text" name="bidder_phone"
-                                                                    maxlength="11"></label></p>
+                    <p class="font-size-regular"><label id="name_label">성명 <input id="bidder_name" type="text"
+                                                                                  name="bidder_name"></label></p>
+                    <p class="font-size-regular"><label id="phone_label">전화번호 <input id="bidder_phone" type="text"
+                                                                                     name="bidder_phone"
+                                                                                     maxlength="11"></label></p>
                     <p class="font-size-regular"><label>이메일 <input id="bidder_email" type="email"
                                                                    name="bidder_email"></label></p>
                 </div>
 
-                <p class="bold font-size-regular" style="margin-top: 20px">개인정보 수집 및 제공 동의</p>
-                <p class="font-size-small">입찰자의 정보가 작품 배송을 위해 제3자(갤러리카페 옥키)에게 제공될 수 있습니다.
+                <p class="bold font-size-regular" id="guide-title" style="margin-top: 20px">개인정보 수집 및 제공 동의</p>
+                <p class="font-size-small guide">입찰자의 정보가 작품 배송을 위해 제3자(갤러리카페 옥키)에게 제공될 수 있습니다. 입찰하셨던 작품의 가격이 갱신되면 메일로 알려드립니다.
                     입찰자는 개인정보제공 동의를 거부할 권리가 있으나, 거부시 입찰할 수 없습니다. 경매 기간 이후 모든 배송 완료시 개인정보를 파기합니다.
                     <br>수집 정보: 이름, 전화번호, 이메일</p>
-                <p class="medium font-size-small" style="color:red; text-align: center;">***입찰취소가 불가하니 신중한 입찰
+                <p class="medium font-size-small guide" style="color:red; text-align: center;">***입찰취소가 불가하니 신중한 입찰
                     부탁드립니다***</p>
 
                 <!-- 하단 -->
@@ -177,14 +191,17 @@
     const modal = document.getElementById("modal_click_bid");
     const bidModal = document.getElementById("click_bid");
     const buynowModal = document.getElementById("click_buy_now");
+    const getNotiModal = document.getElementById("get_noti_btn");
 
     if (sold === 'True') {
-        bidModal.disabled = true;
-        buynowModal.disabled = true;
+        bidModal.hidden = true;
+        buynowModal.hidden = true;
+        getNotiModal.hidden = true;
         document.getElementById("sold_out").innerHTML = "<span style='color: red' >작품이 낙찰되었습니다</span>";
     } else if (sold === 'Always') {
         bidModal.hidden = true;
         buynowModal.hidden = true;
+        getNotiModal.hidden = true;
         document.getElementById("sold_out").innerHTML = "<br><span style='font-weight: bold; color: orange'>Pigment print</span><br>옥키(<span style='text-decoration: underline' onclick=window.open('https://instagram.com/cafe_oki?igshid=YmMyMTA2M2Y=')>@cafe_oki</span>)에서 상시 구매 가능합니다"
     }
 
@@ -222,6 +239,23 @@
         document.getElementById("bid_price_form").innerHTML = "<p class='font-size-regular'>즉시 구매가</p><p class='font-size-regular'>" + buy_now + "</p>";
     });
 
+    // 메일 알림 신청
+    let guide = document.getElementsByClassName("guide") // hidden 하기 위해
+
+    getNotiModal.addEventListener("click", e => {
+        modal.style.display = "flex";
+        document.body.style.overflowY = "hidden";
+        guide[1].hidden = true;
+
+        document.getElementById("name_label").hidden = true;
+        document.getElementById("phone_label").hidden = true;
+
+        document.getElementById("bid_top").innerHTML = "<p class='font-size-regular'>가격변동 알림받기</p>";
+        document.getElementById("bid_price_form").innerHTML = "<p class='font-size-regular'>" + product_name + "</p>"
+        guide[0].innerHTML = "경매기간이 종료된 후, 모든 정보를 파기합니다. 알림 서비스 신청 후 메일 수신을 거부하고 싶으시면 sunapshot@gmail.com으로 연락 부탁드립니다."
+
+    })
+
     // 모달 닫기
     const buttonCloseModal = document.getElementById("close_modal");
     buttonCloseModal.addEventListener("click", e => {
@@ -234,45 +268,117 @@
     let submitForm = document.querySelector('#bid_submit');
     submitForm.addEventListener("click", function (message) {
 
-        let bid_price = Number($("#bid_price").val());
-        let bidder_name = $("#bidder_name").val();
-        let bidder_phone = $("#bidder_phone").val();
-        let bidder_email = $("#bidder_email").val();
-        let bid_agree = $("#bid_agree").is(':checked');  // true or false
-        let param = {
-            'product_name': product_name,
-            'bidder_name': bidder_name,
-            'bid_price': bid_price,
-            'bidder_phone': bidder_phone,
-            'bidder_email': bidder_email
-        }
+        let bid_price;
+        let bidder_name;
+        let bidder_phone;
+        let bidder_email;
+        let bid_agree;
 
-        // bid_price 값이 있으면, 입찰 모달
-        if (!isNaN(bid_price)) {
-            console.log('bid_price는', bid_price);
 
-            /* 가격 유효성 검사 */
-            if (bid_price <= current_price) {
-                alert("현재가보다 더 높은 가격을 입력해주십시오");
+        // 메일 알림받기면
+        if ($("#bid_top").text() === "가격변동 알림받기") {
+            bid_price = 0;
+            bidder_name = '메일알림 신청';
+            bidder_phone = '00000000000';
+            bidder_email = $("#bidder_email").val();
+            bid_agree = $("#bid_agree").is(':checked');  // true or false
 
-                document.getElementById("bid_price").value = ''; // 입찰 가격칸 비우기
-                $('#bid_price').focus(); // 포커스를 이동시켜 바로 이름 입력할 수 있게
+            let param = {
+                'product_name': product_name,
+                'bidder_name': bidder_name,
+                'bid_price': bid_price,
+                'bidder_phone': bidder_phone,
+                'bidder_email': bidder_email
+            }
 
-            } else if (bid_price % 1000 !== 0) {
-                alert("1000원 단위로 호가를 제출해주세요");
+            $(this).attr("disabled", true);
+            submitForm.value = "제출 중입니다. 최장 1분 소요될 수 있습니다.";
 
-                document.getElementById("bid_price").value = '';
-                $('#bid_price').focus();
+            $.ajax({
+                url: '{%  url 'submit' %}',
+                type: 'POST',
+                headers: {
+                    'X-CSRFTOKEN': '{{ csrf_token }}'
+                },
+                contentType: "application/json",
+                data: JSON.stringify(param),
 
-            } else if (bid_price > 300000) {
-                alert("올바른 가격을 입력해주세요");
+                success: function (data) {
+                    location.reload();
+                    alert('메일 알림신청이 완료되었습니다');
+                },
+                error: function (status, error) {
+                    alert('관리자에게 문의해주십시오');
+                    console.log(error);
+                }
+            });
 
-                document.getElementById("bid_price").value = '';
-                $('#bid_price').focus();
+        } else {  // 메일 알림받기 아니면
+            bid_price = Number($("#bid_price").val());
+            bidder_name = $("#bidder_name").val();
+            bidder_phone = $("#bidder_phone").val();
+            bidder_email = $("#bidder_email").val();
+            bid_agree = $("#bid_agree").is(':checked');  // true or false
 
-            } else {  // 문제 없으면
+            let param = {
+                'product_name': product_name,
+                'bidder_name': bidder_name,
+                'bid_price': bid_price,
+                'bidder_phone': bidder_phone,
+                'bidder_email': bidder_email
+            }
+
+            // bid_price 값이 있으면, 입찰 모달
+            if (!isNaN(bid_price)) {
+
+                /* 가격 유효성 검사 */
+                if (bid_price <= current_price) {
+                    alert("현재가보다 더 높은 가격을 입력해주십시오");
+
+                    document.getElementById("bid_price").value = ''; // 입찰 가격칸 비우기
+                    $('#bid_price').focus(); // 포커스를 이동시켜 바로 이름 입력할 수 있게
+
+                } else if (bid_price % 1000 !== 0) {
+                    alert("1000원 단위로 호가를 제출해주세요");
+
+                    document.getElementById("bid_price").value = '';
+                    $('#bid_price').focus();
+
+                } else {  // 문제 없으면 다음 유효성 검사 후 submit
+                    if (check(bidder_name, bidder_phone, bidder_email, bid_agree) !== false) {
+                        $(this).attr("disabled", true);
+                        submitForm.value = "제출 중입니다";
+
+                        $.ajax({
+                            url: '{%  url 'submit' %}',
+                            type: 'POST',
+                            headers: {
+                                'X-CSRFTOKEN': '{{ csrf_token }}'
+                            },
+                            contentType: "application/json",
+                            data: JSON.stringify(param),
+
+                            success: function (data) {
+                                location.reload();
+                                alert('입찰이 완료되었습니다');
+                            },
+                            error: function (status, error) {
+                                alert('관리자에게 문의해주십시오');
+                                console.log(error);
+                            }
+                        });
+                    } else {
+                        console.log('양식 확인');
+                    }
+                }
+
+                // bid_price is NaN 이면 즉시구매 모달
+            } else {
                 if (check(bidder_name, bidder_phone, bidder_email, bid_agree) !== false) {
+                    param['bid_price'] = buy_now;  // post할 때, bid_price를 즉시구매가로 대체
                     $(this).attr("disabled", true);
+                    submitForm.value = "제출 중입니다";
+
                     $.ajax({
                         url: '{%  url 'submit' %}',
                         type: 'POST',
@@ -296,33 +402,6 @@
                 }
             }
 
-            // bid_price is NaN 이면 즉시구매 모달
-        } else {
-            if (check(bidder_name, bidder_phone, bidder_email, bid_agree) !== false) {
-                param['bid_price'] = buy_now;  // post할 때, bid_price를 즉시구매가로 대체
-                $(this).attr("disabled", true);
-
-                $.ajax({
-                    url: '{%  url 'submit' %}',
-                    type: 'POST',
-                    headers: {
-                        'X-CSRFTOKEN': '{{ csrf_token }}'
-                    },
-                    contentType: "application/json",
-                    data: JSON.stringify(param),
-
-                    success: function (data) {
-                        location.reload();
-                        alert('입찰이 완료되었습니다');
-                    },
-                    error: function (status, error) {
-                        alert(error);
-                        console.log(error);
-                    }
-                });
-            } else {
-                console.log('양식 확인');
-            }
         }
     });
 
