사진 클릭시 상세페이지 이동, 시작가 수정

--- a/templates/auction/main2.html
+++ b/templates/auction/main2.html
@@ -63,7 +63,7 @@
     {% for product in products %}
         <div class="flex-item">
             <div class="image-box hi">
-                <img class="product-img"
+                <img class="product-img" style="cursor:pointer;" onclick="window.open('http://www.photoauction.site/search/?csrfmiddlewaretoken=1ZYqIL4VI1cc6tJRLFPkUBJn8P0NF5ioUT8Or0jr2yN2ji7POS4KyFt5wDFEc8gc&kw={{ product.product_name }}')"
                      src="{% get_static_prefix %}{{ product.image }}">
             </div>
 
