--- a/templates/content/product_detail2.html
+++ b/templates/content/product_detail2.html
@@ -52,7 +52,7 @@
                 <hr class="detail-table">
                 <p class="medium font-size-regular">제품명: {{ product.product_name }}</p>
                 <p class="regular font-size-regular">사이즈: {{ product.product_size }}</p>
-                <p class="regular font-size-regular">시작가: 5000원</p>
+                <p class="regular font-size-regular" id="start_price">시작가: 5000원</p>
                 <p class="regular font-size-regular">즉시 구매가: {{ product.buy_now }}</p>
                 <hr class="detail-table">
                 <p class="font-size-regular" style="padding-top: 20px">현재 가격: <span
@@ -156,7 +156,8 @@ forward_to_inbox
                 </div>
 
                 <p class="bold font-size-regular" id="guide-title" style="margin-top: 20px">개인정보 수집 및 제공 동의</p>
-                <p class="font-size-small guide">입찰자의 정보가 작품 배송을 위해 제3자(갤러리카페 옥키)에게 제공될 수 있습니다. 입찰하셨던 작품의 가격이 갱신되면 메일로 알려드립니다.
+                <p class="font-size-small guide">입찰자의 정보가 작품 배송을 위해 제3자(갤러리카페 옥키)에게 제공될 수 있습니다. 입찰하셨던 작품의 가격이 갱신되면 메일로
+                    알려드립니다.
                     입찰자는 개인정보제공 동의를 거부할 권리가 있으나, 거부시 입찰할 수 없습니다. 경매 기간 이후 모든 배송 완료시 개인정보를 파기합니다.
                     <br>수집 정보: 이름, 전화번호, 이메일</p>
                 <p class="medium font-size-small guide" style="color:red; text-align: center;">***입찰취소가 불가하니 신중한 입찰
@@ -185,7 +186,12 @@ forward_to_inbox
         const current_price = {{ product.current_price }}
         const buy_now = {{ product.buy_now }}
         const sold = '{{ product.sold }}'
+        const size = '{{ product.product_size }}'
     {% endfor %}
+
+    if (size === 'A2') {
+        document.getElementById('start_price').innerHTML = "시작가: 10000원"
+    }
 
     // 모달 열기 + 무슨 버튼 눌렀는 지까지 -> html에 내용 쏴줌
     const modal = document.getElementById("modal_click_bid");
@@ -202,6 +208,7 @@ forward_to_inbox
         bidModal.hidden = true;
         buynowModal.hidden = true;
         getNotiModal.hidden = true;
+        document.getElementById('start_price').innerHTML = "시작가: 30000원"
         document.getElementById("sold_out").innerHTML = "<br><span style='font-weight: bold; color: orange'>Pigment print</span><br>옥키(<span style='text-decoration: underline' onclick=window.open('https://instagram.com/cafe_oki?igshid=YmMyMTA2M2Y=')>@cafe_oki</span>)에서 상시 구매 가능합니다"
     }
 
