--- a/templates/content/product_detail2.html
+++ b/templates/content/product_detail2.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet"
           href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <link rel="stylesheet" type="text/css" href="{% static 'style.css' %} ">
     <style>
         .top {
@@ -54,6 +55,11 @@
                 <p class="regular font-size-regular">사이즈: {{ product.product_size }}</p>
                 <p class="regular font-size-regular" id="start_price">시작가: 5000원</p>
                 <p class="regular font-size-regular">즉시 구매가: {{ product.buy_now }}</p>
+                <p class="regular font-size-small" id="attention"><span class="material-symbols-outlined">
+info
+</span> 액자를 포함하지 않은 가격입니다. 액자 추가는 낙찰시 문의 부탁드립니다. <br><span class="material-symbols-outlined">
+info
+</span> 배송 시 4000원 추가되며, 카페 옥키 픽업은 무료입니다.</p>
                 <hr class="detail-table">
                 <p class="font-size-regular" style="padding-top: 20px">현재 가격: <span
                         style="font-weight: bold">{{ product.current_price }}</span></p>
@@ -75,7 +81,7 @@
                 </div>
             </div>
             <div id="get_noti">
-                <p class="font-size-small">*입찰 전, 관심 작품의 가격 변동을 입찰자와 동일하게 메일로 알림 받을 수 있습니다</p>
+                <p class="font-size-small">입찰 전, 관심 작품의 가격 변동을 입찰자와 동일하게 메일로 알림 받을 수 있습니다</p>
                 <button class="w-btn-mini font-size-small" id="get_noti_btn" onclick="window.scrollTo(0,0)"><span
                         class="material-symbols-outlined font-size-regular">
 forward_to_inbox
@@ -207,9 +213,10 @@ forward_to_inbox
     } else if (sold === 'Always') {
         bidModal.hidden = true;
         buynowModal.hidden = true;
-        getNotiModal.hidden = true;
-        document.getElementById('start_price').innerHTML = "시작가: 30000원"
-        document.getElementById("sold_out").innerHTML = "<br><span style='font-weight: bold; color: orange'>Pigment print</span><br>옥키(<span style='text-decoration: underline' onclick=window.open('https://instagram.com/cafe_oki?igshid=YmMyMTA2M2Y=')>@cafe_oki</span>)에서 상시 구매 가능합니다"
+        document.getElementById('attention').hidden = true;
+        document.getElementById('get_noti').hidden = true;
+        document.getElementById('start_price').innerHTML = "시작가: 32000원"
+        document.getElementById("sold_out").innerHTML = "<br><span style='font-weight: bold; color: orange'>Pigment print</span><br><span style='text-decoration: underline' onclick=window.open('https://smartstore.naver.com/cafeoki/products/8512075800')>옥키 스마트스토어</span>에서 상시 구매 가능합니다"
     }
 
 
