contact 옥키 명기오타 수정

--- a/templates/auction/main2.html
+++ b/templates/auction/main2.html
@@ -34,7 +34,7 @@
             <p class="regular font-size-regular">작가: 박수빈</p>
             <p class="regular font-size-regular">전시: 목적이 있는 여행</p>
             <p class="regular font-size-regular">(3/12 ~ 3/18) Hushed Cafe & Gallery</p>
-            <p class="regular font-size-regular">(5/9 ~ 5/20) 옥키 Oki Coffee & Gallery</p>
+            <p class="regular font-size-regular">(5/9 ~ 5/20) 옥키 OKi : Coffee & Photography</p>
         </div>
     </div>
 </div>
@@ -46,14 +46,6 @@
                                                 onclick="window.open('https://naver.me/G14a4RzO')">갤러리 카페 옥키</span>에서
             실물을 확인해보세요</p>
     </div>
-    {#    <div>#}
-    {#        <form style="display: flex; flex-direction: row" method="GET" action="{% url 'search_result' %}">#}
-    {#            {% csrf_token %}#}
-    {#            <input style="width:80%; height: 35px; border-radius: 15px; border: solid 1px lightgray; margin-right:19px;"#}
-    {#                   type="search" name="kw">#}
-    {#            <button class="w-btn" type="submit">검색</button>#}
-    {#        </form>#}
-    {#    </div>#}
 </div>
 
 
@@ -89,13 +81,13 @@
             <p class="regular contact-info" style="color: dimgray"> 박수빈 </p>
             <p class="regular contact-info" style="color: dimgray"> E-mail: sbinp5818@naver.com </p>
             <p class="regular contact-info" style="color: dimgray"> Instagram: @su.napshot </p>
-            <p class="regular contact-info" style="color: dimgray"> 기술적 문제 발생시: sunapshot@gmail.com </p>
+            <p class="regular contact-info" style="color: dimgray; line-height: normal"> 기술적 문제 발생시: sunapshot@gmail.com </p>
         </div>
         <!-- 옥키 -->
         <div style="margin-left: 50px; text-align: left">
-            <p class="regular contact-info" style="color: dimgray"> 옥키 Oki Coffee & Gallery</p>
+            <p class="regular contact-info" style="color: dimgray; line-height: normal"> 옥키 OKi : Coffee & Photography</p>
             <p class="regular contact-info" style="color: dimgray"> Tel: 070 4233 2012 </p>
-            <p class="regular contact-info" style="color: dimgray"> 서울특별시 중구 삼일대로4길 19 2층 </p>
+            <p class="regular contact-info" style="color: dimgray; line-height: normal"> 서울특별시 중구 삼일대로4길 19 2층 </p>
         </div>
     </div>
     <div class="font-size-small" style="color: gray; padding-top: 10px"> COPYRIGHT 2023 박수빈. ALL RIGHTS RESERVED.</div>
