--- a/templates/content/product_detail2.html
+++ b/templates/content/product_detail2.html
@@ -116,9 +116,9 @@ forward_to_inbox
         </div>
         <!-- 옥키 -->
         <div style="margin-left: 50px; text-align: left">
-            <p class="regular contact-info" style="color: dimgray"> 옥키 Oki Coffee & Gallery</p>
+            <p class="regular contact-info" style="color: dimgray; line-height: normal"> 옥키 OKi : Coffee & Photography</p>
             <p class="regular contact-info" style="color: dimgray"> Tel: 070 4233 2012 </p>
-            <p class="regular contact-info" style="color: dimgray"> 서울특별시 중구 삼일대로4길 19 2층 </p>
+            <p class="regular contact-info" style="color: dimgray; line-height: normal"> 서울특별시 중구 삼일대로4길 19 2층 </p>
         </div>
     </div>
     <div class="font-size-small" style="color: gray; padding-top: 10px"> COPYRIGHT 2023 박수빈. ALL RIGHTS RESERVED.
