--- a/templates/auction/main2.html
+++ b/templates/auction/main2.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>전시작품 경매</title>
-    <meta name="naver-site-verification" content="285eacb60bd3e8562fc40274470e53be70df973b" />
+    <meta name="naver-site-verification" content="285eacb60bd3e8562fc40274470e53be70df973b"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -21,6 +21,7 @@
             background-image: linear-gradient(rgba(0, 0, 0, 0.527), rgba(0, 0, 0, 0.5)), url("{% static 'top_background_image.jpg' %}");
             background-size: 100%;
             align-items: center;
+            background-repeat: round;
         }
     </style>
 </head>
@@ -33,8 +34,8 @@
         <div style="padding-top: 10px; line-height: 120%">
             <p class="regular font-size-regular">작가: 박수빈</p>
             <p class="regular font-size-regular">전시: 목적이 있는 여행</p>
-            <p class="regular font-size-regular">(3/12 ~ 3/18) Hushed Cafe & Gallery</p>
-            <p class="regular font-size-regular">(5/9 ~ 5/20) 옥키 OKi : Coffee & Photography</p>
+            <p class="regular" style="font-size: 1.4rem">(3/12 ~ 3/18) Hushed Cafe & Gallery</p>
+            <p class="regular" style="font-size: 1.4rem">(5/9 ~ 5/20) 옥키 OKi : Coffee & Photography</p>
         </div>
     </div>
 </div>
@@ -43,7 +44,7 @@
 <div class="search-bar">
     <div>
         <p class="font-size-regular" style="padding: 10px;">*<span style="color: orange; cursor: pointer;"
-                                                onclick="window.open('https://naver.me/G14a4RzO')">갤러리 카페 옥키</span>에서
+                                                                   onclick="window.open('https://naver.me/G14a4RzO')">갤러리 카페 옥키</span>에서
             실물을 확인해보세요</p>
     </div>
 </div>
@@ -56,7 +57,8 @@
     {% for product in products %}
         <div class="flex-item">
             <div class="image-box hi">
-                <img class="product-img" style="cursor:pointer;" onclick="window.open('http://www.photoauction.site/search/?csrfmiddlewaretoken=1ZYqIL4VI1cc6tJRLFPkUBJn8P0NF5ioUT8Or0jr2yN2ji7POS4KyFt5wDFEc8gc&kw={{ product.product_name }}')"
+                <img class="product-img" style="cursor:pointer;"
+                     onclick="window.open('http://www.photoauction.site/search/?csrfmiddlewaretoken=1ZYqIL4VI1cc6tJRLFPkUBJn8P0NF5ioUT8Or0jr2yN2ji7POS4KyFt5wDFEc8gc&kw={{ product.product_name }}')"
                      src="{% get_static_prefix %}{{ product.image }}">
             </div>
 
@@ -81,11 +83,13 @@
             <p class="regular contact-info" style="color: dimgray"> 박수빈 </p>
             <p class="regular contact-info" style="color: dimgray"> E-mail: sbinp5818@naver.com </p>
             <p class="regular contact-info" style="color: dimgray"> Instagram: @su.napshot </p>
-            <p class="regular contact-info" style="color: dimgray; line-height: normal"> 기술적 문제 발생시: sunapshot@gmail.com </p>
+            <p class="regular contact-info" style="color: dimgray; line-height: normal"> 기술적 문제 발생시:
+                sunapshot@gmail.com </p>
         </div>
         <!-- 옥키 -->
         <div style="margin-left: 50px; text-align: left">
-            <p class="regular contact-info" style="color: dimgray; line-height: normal"> 옥키 OKi : Coffee & Photography</p>
+            <p class="regular contact-info" style="color: dimgray; line-height: normal"> 옥키 OKi : Coffee &
+                Photography</p>
             <p class="regular contact-info" style="color: dimgray"> Tel: 070 4233 2012 </p>
             <p class="regular contact-info" style="color: dimgray; line-height: normal"> 서울특별시 중구 삼일대로4길 19 2층 </p>
         </div>
