--- a/templates/content/product_detail2.html
+++ b/templates/content/product_detail2.html
@@ -319,7 +319,7 @@ forward_to_inbox
             }
 
             $(this).attr("disabled", true);
-            submitForm.value = "제출 중입니다. 최장 1분 소요될 수 있습니다.";
+            submitForm.value = "제출 중입니다(최대 1분 소요)";
 
             $.ajax({
                 url: '{%  url 'submit' %}',
@@ -358,45 +358,31 @@ forward_to_inbox
             // bid_price 값이 있으면, 입찰 모달
             if (!isNaN(bid_price)) {
 
-                /* 가격 유효성 검사 */
-                if (bid_price <= current_price) {
-                    alert("현재가보다 더 높은 가격을 입력해주십시오");
+                // 문제 없으면 다음 유효성 검사 후 submit
+                if (check(bidder_name, bidder_phone, bidder_email, bid_agree) !== false) {
+                    $(this).attr("disabled", true);
+                    submitForm.value = "제출 중입니다(최대 1분 소요)";
 
-                    document.getElementById("bid_price").value = ''; // 입찰 가격칸 비우기
-                    $('#bid_price').focus(); // 포커스를 이동시켜 바로 이름 입력할 수 있게
+                    $.ajax({
+                        url: '{%  url 'submit' %}',
+                        type: 'POST',
+                        headers: {
+                            'X-CSRFTOKEN': '{{ csrf_token }}'
+                        },
+                        contentType: "application/json",
+                        data: JSON.stringify(param),
 
-                } else if (bid_price % 1000 !== 0) {
-                    alert("1000원 단위로 호가를 제출해주세요");
-
-                    document.getElementById("bid_price").value = '';
-                    $('#bid_price').focus();
-
-                } else {  // 문제 없으면 다음 유효성 검사 후 submit
-                    if (check(bidder_name, bidder_phone, bidder_email, bid_agree) !== false) {
-                        $(this).attr("disabled", true);
-                        submitForm.value = "제출 중입니다";
-
-                        $.ajax({
-                            url: '{%  url 'submit' %}',
-                            type: 'POST',
-                            headers: {
-                                'X-CSRFTOKEN': '{{ csrf_token }}'
-                            },
-                            contentType: "application/json",
-                            data: JSON.stringify(param),
-
-                            success: function (data) {
-                                location.reload();
-                                alert('입찰이 완료되었습니다');
-                            },
-                            error: function (status, error) {
-                                alert('관리자에게 문의해주십시오');
-                                console.log(error);
-                            }
-                        });
-                    } else {
-                        console.log('양식 확인');
-                    }
+                        success: function (data) {
+                            location.reload();
+                            alert('입찰이 완료되었습니다');
+                        },
+                        error: function (status, error) {
+                            alert('관리자에게 문의해주십시오');
+                            console.log(error);
+                        }
+                    });
+                } else {
+                    console.log('양식 확인');
                 }
 
                 // bid_price is NaN 이면 즉시구매 모달
@@ -404,7 +390,7 @@ forward_to_inbox
                 if (check(bidder_name, bidder_phone, bidder_email, bid_agree) !== false) {
                     param['bid_price'] = buy_now;  // post할 때, bid_price를 즉시구매가로 대체
                     $(this).attr("disabled", true);
-                    submitForm.value = "제출 중입니다";
+                    submitForm.value = "제출 중입니다(최대 1분 소요)";
 
                     $.ajax({
                         url: '{%  url 'submit' %}',
